# fastapi

./: README.md  items_views.py  main.py  pyproject.toml
db/: config.py
db/models/: base.py  db_helper.py  product.py
users/: crud.py  schemas.py  views.py
