[tool.poetry]
name = "study"
version = "0.1.0"
description = ""
authors = ["sultangame <sultankurbanov404@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
sqlalchemy = {extras = ["asynio"], version = "^2.0.21"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
